--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -2,24 +2,26 @@
   background-color: #333;
   color: #fff;
   padding: 10px 20px;
+
   .wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .siteName {
-      margin: 0;
-      font-size: 24px;
+
+    .siteLink {
+      text-decoration: none;
+
+      color: #fff;
+
+      .siteName {
+        margin: 0;
+        font-size: 24px;
+      }
     }
 
     .buttons {
       display: flex;
       gap: 10px;
-
-      // .icon {
-      //   display: flex;
-      //   align-items: center;
-      //   cursor: pointer;
-      // }
     }
   }
 }
